Agrego carpeta maquetación y modifico index html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Mi Portafolio</h1>
-        <h2>Tu Nombre</h2>
+        <h2>Diego Alexander Rodríguez Jimenez</h2>
         <p>Desarrollador Web</p>
     </header>
 
@@ -83,9 +83,9 @@
     <footer>
         <h2>Redes Sociales</h2>
         <ul>
-            <li><a href="https://www.linkedin.com/tu_perfil" target="_blank">LinkedIn</a></li>
-            <li><a href="https://www.twitter.com/tu_perfil" target="_blank">Twitter</a></li>
-            <li><a href="https://www.github.com/tu_perfil" target="_blank">GitHub</a></li>
+            <li><a href="https://www.facebook.com/diego.a.jimenez.37/?locale=es_LA" target="_blank">Facebook</a></li>
+            <li><a href="https://www.instagram.com/diegor_82/#" target="_blank">Instagram</a></li>
+            <li><a href="https://github.com/diearodriguezjim?tab=repositories" target="_blank">GitHub</a></li>
         </ul>
     </footer>
 </body>
