--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Mi Portafolio</h1>
-        <h2>Diego A. Rodríguez J.</h2>
+        <h2>Diego A.</h2>
         <p>Desarrollador Web</p>
     </header>
 
